Actualización de la configuración de seguridad y mejoras en el manejo de notificaciones: se ajustan los métodos de autorización, se cambia el mapeo de la notificación a PATCH, se eliminan campos innecesarios en DTOs, y se actualizan los valores predeterminados en el servicio de registro.